--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "radiomanager",
-  "version": "1.0.99",
+  "version": "1.0.99-dev",
   "description": "RadioManager",
   "license": "MIT",
   "main": "src/index.js",
